testsuite/poke.pkl/cdiv-f32-diag-2.pk
/* { dg-do compile } */

var res
  = 1 ./^ (7 as uint<33>); /* { dg-error "invalid operand .*" } */
